# adversarial-workflow

./: .aider.chat.history.md  .aider.input.history  .gitignore  .pre-commit-config.yaml  AGENT_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  EVALUATOR-QA-RESPONSE.txt  LICENSE  PHASE-3-COMPLETION-SUMMARY.md  QUICK-AGENT-SETUP.md  QUICK_START.md  README.md  SETUP.md  UPGRADE.md  conftest.py  planner2.md  pyproject.toml
.adversarial/: config.yml
.agent-context/: 2026-02-03-SESSION-STATE.md  ADV-0013-HANDOFF-feature-developer.md  ADV-0013-REVIEW-STARTER.md  ADV-0014-HANDOFF-feature-developer.md  ADV-0014-REVIEW-STARTER.md  ADV-0015-HANDOFF-feature-developer.md  ADV-0015-REVIEW-STARTER.md  ADV-0019-HANDOFF-feature-developer.md  ADV-0019-REVIEW-STARTER.md  ADV-0022-HANDOFF-feature-developer.md  ADV-0026-HANDOFF-feature-developer.md  ADV-0027-HANDOFF-feature-developer.md  ADV-0029-HANDOFF-feature-developer.md  ADV-0030-HANDOFF-feature-developer.md  ADV-0031-HANDOFF-feature-developer.md  ADV-0031-REVIEW-STARTER.md  ADV-0032-HANDOFF-feature-developer.md  ADV-0032-REVIEW-STARTER.md  ADV-0033-HANDOFF-feature-developer.md  ADV-0035-HANDOFF-feature-developer.md  ADV-0035-REVIEW-STARTER.md  ADV-0037-REVIEW-STARTER.md  ADV-0040-HANDOFF-feature-developer-v3.md  ADV-0041-0050-HANDOFF-feature-developer.md  ADV-0043-HANDOFF-feature-developer.md  ADV-0046-REVIEW-STARTER.md  ADV-0048-HANDOFF-feature-developer.md  ADV-0049-HANDOFF-feature-developer.md  ADV-0049-REVIEW-STARTER.md  ADV-0051-HANDOFF-feature-developer-v3.md  ADV-0054-REVIEW-STARTER.md  ADV-0061-REVIEW-STARTER.md  ADV-0062-HANDOFF-feature-developer.md  ADV-0065-HANDOFF-feature-developer.md  ADV-0066-HANDOFF-feature-developer.md  ADV-0067-HANDOFF-feature-developer.md  GTX-0004-REVIEW-STARTER.md  README.md  REVIEW-INSIGHTS.md  agent-handoffs.json  (+2 more)
.aider.tags.cache.v4/: cache.db
.claude/: settings.json
.dispatch/: bus.jsonl
.github/: dependabot.yml
.serena/: project.yml
adversarial_workflow/: __init__.py  __main__.py  cli.py
agents/: 2025-10-12 dual_agent_setup.md  AGENT-IDENTITY-STANDARD.md  AGENT_LAUNCHER.sh  MULTI-SESSION-GUIDE.md  README.md  ROLES.md  api-developer.sh  ca  claude-agent  code-reviewer.sh  davinci-api-developer.sh  document-reviewer.sh  edl-generator-developer.sh  feature-developer.sh  format-developer.sh  launch  media-processor.sh  preflight  security-reviewer.sh  test-runner.sh  universal-agent-launcher.sh
audit-results/: 6A1-DOCUMENTATION-INVENTORY.md  6A2-TERMINOLOGY-AUDIT.md  6A3-PLATFORM-MESSAGING-AUDIT.md  6A4-USER-JOURNEY-ANALYSIS.md
docs/: CUSTOM_EVALUATORS.md  EVALUATOR-QA-REQUEST.md  EXAMPLES.md  INTERACTION_PATTERNS.md  QUICK-AGENT-SETUP.md  README.md  TERMINOLOGY.md  TROUBLESHOOTING.md  WORKFLOW_PHASES.md
scripts/: .core-manifest.json  README.md  ci-check.sh  logging_config.py  pattern_lint.py  project  validate_task_status.py
tasks/: review-task-setup-005.md
tests/: __init__.py  conftest.py  test_citations.py  test_cli.py  test_cli_core.py  test_cli_dynamic_commands.py  test_config.py  test_env_loading.py  test_evaluate.py  test_evaluate_with_evaluator.py  test_evaluator_config.py  test_evaluator_discovery.py  test_evaluator_runner.py  test_file_splitter.py  test_library_client.py  test_library_commands.py  test_library_enhancements.py  test_library_integration.py  test_list_evaluators.py  (+9 more)
(+566 files in other folders)
