[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-workflow"

version = "0.9.9"

description = "Multi-stage AI evaluation system for task plans, code review, and test validation"
readme = "README.md"
authors = [
    {name = "Fredrik Matheson"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["code-review", "ai", "llm", "quality", "testing", "litellm"]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    "litellm>=1.40.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.14.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/movito/adversarial-workflow"
Documentation = "https://github.com/movito/adversarial-workflow/blob/main/README.md"
Repository = "https://github.com/movito/adversarial-workflow"
Issues = "https://github.com/movito/adversarial-workflow/issues"

[project.scripts]
adversarial = "adversarial_workflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["adversarial_workflow*"]

[tool.setuptools.package-data]
adversarial_workflow = ["templates/*", "templates/.*", "templates/agent-context/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
external = ["DK001", "DK002", "DK003", "DK004"]  # Custom pattern lint rules (scripts/pattern_lint.py)
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "B",      # flake8-bugbear (defensive coding)
    "SIM",    # flake8-simplify
    "ARG",    # unused arguments
    "UP",     # pyupgrade (modern Python)
    "S",      # flake8-bandit (security basics)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E203",   # conflicts with Black-style formatting
    "S101",   # assert used -- fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S", "F841", "SIM103", "SIM105", "SIM117", "RUF059"]
"scripts/**" = ["S603", "S607", "S110"]
"adversarial_workflow/cli.py" = ["E501", "E722", "E741", "SIM108", "SIM102", "SIM103", "SIM118", "N806", "S103", "S110", "S310", "S603", "S607", "ARG001", "F841", "RUF001", "RUF013"]
"adversarial_workflow/evaluators/runner.py" = ["ARG001"]
"adversarial_workflow/library/client.py" = ["S310"]
"adversarial_workflow/library/cache.py" = ["SIM105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "network: marks tests as requiring network access (deselect with '-m not network')",
]
